--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'kodilla-stream'
 include 'kodilla-exception'
 include 'kodilla-rps'
 include 'kodilla-first-project'
+include 'kodilla-good-patterns'
 
