--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'kodilla-exception'
 include 'kodilla-rps'
 include 'kodilla-first-project'
 include 'kodilla-good-patterns'
+include 'kodilla-spring'
 
