Changes to be committed: 	modified:   kodilla-patterns/src/main/java/com/kodilla/patterns/PatternsRunner.java 	modified:   kodilla-patterns/src/main/java/com/kodilla/patterns/enums/hotel/HotelApp.java 	modified:   kodilla-patterns/src/main/java/com/kodilla/patterns/enums/hotel/PriceList.java 	modified:   kodilla-patterns/src/main/java/com/kodilla/patterns/enums/hotel/Season.java 	modified:   kodilla-patterns/src/main/java/com/kodilla/patterns/singleton/Logger.java 	modified:   kodilla-patterns/src/main/java/com/kodilla/patterns/singleton/SettingsFileEngine.java 	modified:   kodilla-patterns/src/test/java/com/kodilla/patterns/singleton/LoggerTestSuite.java 	modified:   kodilla-patterns/src/test/java/com/kodilla/patterns/singleton/SettingsFileEngineTestSuite.java 	modified:   settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include 'kodilla-rps'
 include 'kodilla-first-project'
 include 'kodilla-good-patterns'
 include 'kodilla-spring'
-
+include 'kodilla-spring-web'
+include 'kodilla-patterns'
