--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include 'kodilla-good-patterns'
 include 'kodilla-spring'
 include 'kodilla-spring-web'
 include 'kodilla-patterns'
+include 'kodilla-hibernate'
